# django_pet_marketplace

./: .coverage  .docker_env  .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env_file_sample  mypy.ini  pyproject.toml
notes/: setup-preinit.sh
shell-scripts/: check-req-dev-exists.sh  check-req-exists.sh  start-amqp-consumer.sh
src/: .coverage  .coveragerc  .env.template  pytest.ini
src/accounts/admin/: __init__.py  profile.py  user.py
src/accounts/managers/: __init__.py  user.py
src/accounts/migrations/: 0001_initial.py  0002_remove_user__status_user_status.py
src/accounts/models/: __init__.py  profile.py  user.py
src/app/: celery.py
src/app/core/: models.py
src/app/settings/: __init__.py  auth.py  celery.py  db.py  email.py  environ.py  installed_apps.py  middleware.py  rabbitmq.py  restframework.py  spectacular.py  static.py
src/app/urls/: __init__.py  v1.py
src/core/: admin.py
src/core/migrations/: 0001_initial.py
src/e_mailing/: admin.py  apps.py  models.py  tasks.py
src/e_mailing/migrations/: 0001_initial.py
src/orders/: admin.py  models.py  mq_producer.py  tasks.py  urls.py
src/orders/api/: serializers.py  views.py
src/orders/migrations/: 0001_initial.py  0002_order_promos_alter_order_products.py  0003_rename_buyer_order_owner.py
src/orders/services/: order_creation.py  (+1 more)
src/products/: urls.py
src/promos/: admin.py  models.py  urls.py
src/reports/: apps.py  mq_consumer.py
src/tests/: conftest.py
src/utils/: custom_types.py  permissions.py  view_mixins.py
(+40 files in other folders)
